<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:padding="@dimen/padding_large" >

    <RelativeLayout
        android:id="@+id/Waveform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <android.opengl.GLSurfaceView
            android:id="@+id/WaveformArea"
            android:layout_width="1100dp"
            android:layout_height="700dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bluetooth_settings"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_btstatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="BT status:"
            android:textColor="@color/status_color" />

        <Button
            android:id="@+id/preferences_button"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:text="@string/set_preferences" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_connect" />
    </LinearLayout>






    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:orientation="vertical" >



        <LinearLayout
            android:id="@+id/run_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label"
                android:textColor="@color/label_color" />

            <ToggleButton
                android:id="@+id/tbtn_runtoggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="runToggle"
                android:textOff="@string/status_off"
                android:textOn="@string/status_on" />
        </LinearLayout>




        <ToggleButton
            android:id="@+id/tbtn_filter_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/padding_small"
            android:checked="false"
            android:onClick="filterAToggle"
            android:textOff="@string/filter_a_on"
            android:textOn="@string/filter_a_on" />











        <ToggleButton
            android:id="@+id/tbtn_filter_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/padding_small"
            android:checked="false"
            android:onClick="filterBToggle"
            android:textOff="@string/filter_b_on"
            android:textOn="@string/filter_b_on" />

    </LinearLayout>

</RelativeLayout>